# python-pro-dz-7

./: manage.py  pyproject.toml
groups/migrations/: 0001_initial.py
pythonpro_dz_7/: asgi.py  settings.py  urls.py  wsgi.py
students/: forms.py  models.py  urls.py  views.py
students/migrations/: 0001_initial.py
teachers/: constants.py  forms.py
teachers/migrations/: 0001_initial.py
