[tool.poetry]
name = "pythonpro-dz-7"
version = "0.1.0"
description = ""
authors = ["Serhii Romanenko <sergromanenko97@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonpro_dz_7"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
